<resources>
    <string name="app_name">Ex0411</string>

    <!--constraint_02.xml-->
    <string name="title_label">카카오(Kakao)</string>
    <string name="dsec_label">\"Connect Everthing\" 새로운 연결, 더 나은 세상</string>
    <string name="vision_label">비전</string>
    <string name="vision_desc_label">카카오는 새로운 연결을 통해 더 편리하고 즐거운 세상을 꿈꿉니다.<br/>사람과 사람, 사람과 기술을 한층 더 가깝게 연결함으로써<br/>세상을 어제보다 더 나은 곳으로 만들기 위해<br/>노력하고 있습니다.
    </string>
    <!--constraint_03.xml-->
    <string name="spread_label">spread</string>
    <string name="spread_inside_label">spread-inside</string>
    <string name="weighted_label">weighted</string>
    <string name="packed_label">packed</string>
    <string name="pass_label">●</string>
    <string name="logo_label">지문을 사용하시거나 비밀번호를 입력하세요.</string>

    <!--카카오 로그인-->
    <string name="kakao_1">모바일에서 카카오 계정을 확인할 수 있습니다.</string>
    <string name="kakao_2">카카오계정안내</string>
    <string name="kakao_3">비밀번호를 잊어버리셨나요?</string>
</resources>